Updated remaining files

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </div>
 
-        <a href="{{ url_for('app_page') }}" class="btn">Try Our App</a>
+        <a href="/pre-analysis/" class="btn">Try Our App</a>
     </div>
 </body>
 </html>
