--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Our Hackathon Project</h1>
+        <h1>CoachMind AI</h1>
         <p class="subtitle">Innovate. Create. Celebrate.</p>
 
         <div class="features">
